<resources>
    <string name="app_name">VP MeO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="default_notification_channel_id">new</string>
    <string name="default_notification_channel_name">News</string>
    <string name="text_home">Trang chủ</string>

    <string name="text_history">Lịch sử</string>
    <string name="text_meo">Meow</string>
    <string name="text_noti">Khám phá</string>
    <string name="text_social">Bạn bè</string>

    <string name="channel_name">vpmeo</string>
    <string name="channel_description">notification of vpmeo app</string>

    <string name="facebook_app_id">201828170596445</string>
    <string name="fb_login_protocol_scheme">fb201828170596445</string>
    <string name="content_has_credit">Cập nhật mũ cho mèo nè</string>
    <string name="content_hasnt_credit">Đăng kí thẻ Credit để nhận phần quà cho MeO</string>
    <string name="content_has_banking">Cập nhật kính cho mèo nè </string>
    <string name="content_hasnt_banking">Đăng kí Internet Banking để nhận quà cho MeO nào</string>
    <string name="grass">🍀</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Tiếp tục</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Hoàn thành</string>

    <string name="onest">🥇</string>
    <string name="twost">🥈</string>
    <string name="threest">🥉</string>

</resources>
