<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/text_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/text_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_meo"
        android:enabled="true"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/text_meo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/text_noti"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_social"
        android:enabled="true"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/text_social"
        app:showAsAction="ifRoom"/>
</menu>